Fixed styling now that the bold works, too much was bold.

--- a/portal/src/resources/scss/_body.scss
+++ b/portal/src/resources/scss/_body.scss
@@ -1,6 +1,5 @@
 body {
     font-style: normal;
-    font-weight: 500;
     font-size: 14px;
     line-height: 20px;
 }
